--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <script type="module" src="/src/main.jsx"></script>
 
   <!-- change the src -->
-  <script type="text/javascript" src=""></script>
+  <script type="text/javascript" src="https://privy-cookie-manager.idfystaging.com/ext/cookie-banner/cce6bd71-206f-43ed-9076-ec4cfc50a928"></script>
 </body>
 
 </html>
