script tag changes

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
   <script type="module" src="/src/main.jsx"></script>
 
   <!-- change the src -->
-  <script type="text/javascript" src="https://privy-cookie-manager.idfystaging.com/ext/cookie-banner/cce6bd71-206f-43ed-9076-ec4cfc50a928"></script>
+  <script type="text/javascript"
+    src="https://privy-cookie-manager.idfystaging.com/ext/cookie-banner/b0878222-29c0-4a9f-9314-a27772e5a009">
+  </script>
 </body>
 
 </html>
