--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
   <script type="module" src="/src/main.jsx"></script>
 
   <!-- change the src -->
-  <script type="text/javascript"
+  <!-- <script type="text/javascript"
     src="https://privy-cookie-manager.idfystaging.com/ext/cookie-banner/b0878222-29c0-4a9f-9314-a27772e5a009">
-  </script>
+  </script> -->
 </body>
 
 </html>
