--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   <!-- change the src -->
   <script type="text/javascript"
-    src="https://privy-cookie-manager.idfystaging.com/ext/cookie-banner/9e1c7c9e-1e58-4a8b-855a-c07be03a2da5">
+    src="https://moral-capital-bison.ngrok-free.app/ext/cookie-banner/9e1c7c9e-1e58-4a8b-855a-c07be03a2da5">
   </script>
 </body>
 
