--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
   <script type="module" src="/src/main.jsx"></script>
 
   <!-- change the src -->
-  <script type="text/javascript"
+  <script type="text/javascript" src="https://moral-capital-bison.ngrok-free.app/ext/cookie-banner/26ce693c-6143-40bf-bc26-23663113ebd2"></script>
+  <!-- <script type="text/javascript"
     src="https://moral-capital-bison.ngrok-free.app/ext/cookie-banner/9e1c7c9e-1e58-4a8b-855a-c07be03a2da5">
-  </script>
+  </script> -->
 </body>
 
 </html>
