--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
   <script type="module" src="/src/main.jsx"></script>
 
   <!-- change the src -->
-  <script type="text/javascript" src="https://moral-capital-bison.ngrok-free.app/ext/cookie-banner/3b53ea49-0413-452b-bf50-18e3bac64629"></script>
+<script src="/teessst.js"></script>
+  <!-- <script type="text/javascript" src="https://moral-capital-bison.ngrok-free.app/ext/cookie-banner/3b53ea49-0413-452b-bf50-18e3bac64629"></script> -->
   <!-- <script type="text/javascript" src="https://moral-capital-bison.ngrok-free.app/ext/cookie-banner/static/de69b11b-2f0b-405b-a56e-5e8bbc116efb/"></script> -->
   <!-- <script type="text/javascript"
     src="https://moral-capital-bison.ngrok-free.app/ext/cookie-banner/9e1c7c9e-1e58-4a8b-855a-c07be03a2da5">
