--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Afacad:ital,wght@0,400..700;1,400..700&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
     rel="stylesheet">
-    <script type="text/javascript" src="teessst.js"></script>
+    <script type="text/javascript" src="test.js"></script>
 
 <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/embed/v2.js"></script>
 <script>
