--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
-<h1>updated</h1>
+<h1>updated 1</h1>
   <!-- change the src -->
   <script type="text/javascript" src="https://moral-capital-bison.ngrok-free.app/ext/cookie-banner/fa741557-ef1f-4a0f-b620-76b5a0da0675"></script>
   <!-- <script type="text/javascript" src="https://moral-capital-bison.ngrok-free.app/ext/cookie-banner/static/de69b11b-2f0b-405b-a56e-5e8bbc116efb/"></script> -->
