--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Afacad:ital,wght@0,400..700;1,400..700&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
     rel="stylesheet">
-    <script type="text/javascript" src="./test.js"></script>
+  <script type="text/javascript" src="./src/test.js"></script>
 
-<script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/embed/v2.js"></script>
-<script>
-  hbspt.forms.create({
-    portalId: "48746683",
-    formId: "0f45e9f9-0451-488e-babb-fd325ba2af4f"
-  });
-</script>
+  <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/embed/v2.js"></script>
+  <script>
+    hbspt.forms.create({
+      portalId: "48746683",
+      formId: "0f45e9f9-0451-488e-babb-fd325ba2af4f"
+    });
+  </script>
   <!-- Google Tag Manager -->
   <script>(function (w, d, s, l, i) {
       w[l] = w[l] || []; w[l].push({
@@ -42,9 +42,10 @@
 
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
-<h1>updated 2</h1>
+  <h1>updated 2</h1>
   <!-- change the src -->
-  <script type="text/javascript" src="https://moral-capital-bison.ngrok-free.app/ext/cookie-banner/fa741557-ef1f-4a0f-b620-76b5a0da0675"></script>
+  <script type="text/javascript"
+    src="https://moral-capital-bison.ngrok-free.app/ext/cookie-banner/fa741557-ef1f-4a0f-b620-76b5a0da0675"></script>
   <!-- <script type="text/javascript" src="https://moral-capital-bison.ngrok-free.app/ext/cookie-banner/static/de69b11b-2f0b-405b-a56e-5e8bbc116efb/"></script> -->
   <!-- <script type="text/javascript"
     src="https://moral-capital-bison.ngrok-free.app/ext/cookie-banner/9e1c7c9e-1e58-4a8b-855a-c07be03a2da5">
