--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Afacad:ital,wght@0,400..700;1,400..700&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
     rel="stylesheet">
-  <script src="/src/test.js"></script>
+  <script src="src/test.js"></script>
 
   <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/embed/v2.js"></script>
   <script>
@@ -42,7 +42,7 @@
 
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
-  <h1>updated 2</h1>
+  <h1>updated 1</h1>
   <!-- change the src -->
   <script type="text/javascript"
     src="https://moral-capital-bison.ngrok-free.app/ext/cookie-banner/fa741557-ef1f-4a0f-b620-76b5a0da0675"></script>
