--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 
 <body>
-  <script src="src/test.js"></script>
+  <script src="./src/assets/test.js"></script>
 
   <!-- Google Tag Manager (noscript) -->
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KS3M7CSF" height="0" width="0"
@@ -42,7 +42,7 @@
 
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
-  <h1>updated 1</h1>
+  <h1>updated 2</h1>
   <!-- change the src -->
   <script type="text/javascript"
     src="https://moral-capital-bison.ngrok-free.app/ext/cookie-banner/fa741557-ef1f-4a0f-b620-76b5a0da0675"></script>
