--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
 </head>
 
 <body>
-  <script type="text/javascript" src="/src/test.js"></script>
+  <script type="text/javascript" src="/test.js"></script>
   <!-- Google Tag Manager (noscript) -->
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KS3M7CSF" height="0" width="0"
       style="display:none;visibility:hidden"></iframe></noscript>
