--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
   })(window, document, 'script', 'dataLayer', 'GTM-KS3M7CSF');</script>
   <!-- End Google Tag Manager -->
   
-  
+  <script type="text/javascript" src="https://privy-cookie-manager.idfystaging.com/ext/cookie-banner/3960c3ac-43d0-46d7-bed5-be912cc5b3a0"></script>
 </head>
 
 <body>
-  <script type="text/javascript" src="./cookie-banner.js"></script>
+  <!-- <script type="text/javascript" src="./cookie-banner.js"></script> -->
   <!-- Hii -->
   <!-- Google Tag Manager (noscript) -->
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KS3M7CSF" height="0" width="0"
