--- a/index.html
+++ b/index.html
@@ -28,12 +28,11 @@
     'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
   })(window, document, 'script', 'dataLayer', 'GTM-KS3M7CSF');</script>
   <!-- End Google Tag Manager -->
-  
-  <script type="text/javascript" src="https://privy-cookie-manager.idfystaging.com/ext/cookie-banner/3960c3ac-43d0-46d7-bed5-be912cc5b3a0"></script>
+  <script type="text/javascript" src="http://localhost:3000/ext/cookie-banner/305599d8-398c-4eff-a238-029b310e6022"></script>
 </head>
 
 <body>
-  <script type="text/javascript" src="./cookie-banner.js"></script>
+  <!-- <script type="text/javascript" src="./cookie-banner.js"></script> -->
   <!-- Hii -->
   <!-- Google Tag Manager (noscript) -->
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KS3M7CSF" height="0" width="0"
@@ -44,8 +43,6 @@
   <script type="module" src="/src/main.jsx"></script>
   <h1>updated 2</h1>
   <!-- change the src -->
-  <script type="text/javascript"
-    src="https://moral-capital-bison.ngrok-free.app/ext/cookie-banner/fa741557-ef1f-4a0f-b620-76b5a0da0675"></script>
 </body>
 
 </html>
