--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
   })(window, document, 'script', 'dataLayer', 'GTM-KS3M7CSF');</script>
   <!-- End Google Tag Manager -->
-  <script type="text/javascript" src="http://localhost:3000/ext/cookie-banner/305599d8-398c-4eff-a238-029b310e6022"></script>
+  <script type="text/javascript" src="https://moral-capital-bison.ngrok-free.app/ext/cookie-banner/305599d8-398c-4eff-a238-029b310e6022"></script>
 </head>
 
 <body>
