--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
   })(window, document, 'script', 'dataLayer', 'GTM-KS3M7CSF');</script>
   <!-- End Google Tag Manager -->
-  <script type="text/javascript" src="https://moral-capital-bison.ngrok-free.app/ext/cookie-banner/static/7cdf412b-4b32-4ac8-9cc4-f95e3954a73f"></script>
-   <!-- <script type="text/javascript" src="/public/cookie-banner.js"></script> -->
+  <!-- <script type="text/javascript" src="https://moral-capital-bison.ngrok-free.app/ext/cookie-banner/static/7cdf412b-4b32-4ac8-9cc4-f95e3954a73f"></script> -->
+   <script type="text/javascript" src="/public/cookie-banner.js"></script>
 </head>
 
 <body>
