--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
     'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
   })(window, document, 'script', 'dataLayer', 'GTM-KS3M7CSF');</script>
   <!-- End Google Tag Manager -->
-  <!-- <script type="text/javascript" src="https://moral-capital-bison.ngrok-free.app/ext/cookie-banner/static/7cdf412b-4b32-4ac8-9cc4-f95e3954a73f"></script> -->
 </head>
 
 <body>
-  <script type="text/javascript" src="./cookie-banner.js"></script>
+  <script type="text/javascript" src="https://moral-capital-bison.ngrok-free.app/ext/cookie-banner/static/7cdf412b-4b32-4ac8-9cc4-f95e3954a73f"></script>
+
+  <!-- <script type="text/javascript" src="./cookie-banner.js"></script> -->
   <!-- Hii -->
   <!-- Google Tag Manager (noscript) -->
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KS3M7CSF" height="0" width="0"
