--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Afacad:ital,wght@0,400..700;1,400..700&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
     rel="stylesheet">
+    <script type="text/javascript" src="https://privy-cookie-manager.idfystaging.com/ext/cookie-banner/926bcb22-53a2-4e83-9310-eb3cd4d83bde"></script>
   <!-- <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/embed/v2.js"></script>
   <script>
     hbspt.forms.create({
@@ -28,7 +29,6 @@
     'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
   })(window, document, 'script', 'dataLayer', 'GTM-KS3M7CSF');</script>
   <!-- End Google Tag Manager -->
-  <script type="text/javascript" src="https://moral-capital-bison.ngrok-free.app/ext/cookie-banner/static/7cdf412b-4b32-4ac8-9cc4-f95e3954a73f"></script>
 
 </head>
 
