--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Afacad:ital,wght@0,400..700;1,400..700&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
     rel="stylesheet">
-    <script type="text/javascript" src="https://privy-cookie-manager.idfystaging.com/ext/cookie-banner/926bcb22-53a2-4e83-9310-eb3cd4d83bde"></script>
-  <!-- <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/embed/v2.js"></script>
+    <script type="text/javascript" src="https://privy-cookie-manager.idfy.com/ext/cookie-banner/6fd5e8d2-dc60-4558-abaf-c92de379ea43"></script>
+    <!-- <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/embed/v2.js"></script>
   <script>
     hbspt.forms.create({
       portalId: "48746683",
