--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
-  <h1>updated 2</h1>
+  <!-- <h1>updated 2</h1> -->
   <!-- change the src -->
 </body>
 
