--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Afacad:ital,wght@0,400..700;1,400..700&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
     rel="stylesheet">
-    <script type="text/javascript" src="https://privy-cookie-manager.idfy.com/ext/cookie-banner/6fd5e8d2-dc60-4558-abaf-c92de379ea43"></script>
+    <!-- <script type="text/javascript" src="https://privy-cookie-manager.idfy.com/ext/cookie-banner/6fd5e8d2-dc60-4558-abaf-c92de379ea43"></script> -->
     <!-- <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/embed/v2.js"></script>
   <script>
     hbspt.forms.create({
@@ -29,11 +29,11 @@
     'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
   })(window, document, 'script', 'dataLayer', 'GTM-KS3M7CSF');</script>
   <!-- End Google Tag Manager -->
+  <script type="text/javascript" src="./cookie-banner.js"></script>
 
 </head>
 
 <body>
-  <!-- <script type="text/javascript" src="./cookie-banner.js"></script> -->
   <!-- Hii -->
   <!-- Google Tag Manager (noscript) -->
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KS3M7CSF" height="0" width="0"
