--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     rel="stylesheet">
     <script type="text/javascript" src="https://privy-cookie-manager.idfy.com/ext/cookie-banner/76e7bf3c-564f-4769-9c59-91ebada9eeaa"></script>
     <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/embed/v2.js"></script>
-  <script type="text/javascript" src="./public/blocking.js"></script>
+  <script type="text/javascript" src="/blocking.js"></script>
   <script>
     hbspt.forms.create({
       portalId: "48746683",
