--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Afacad:ital,wght@0,400..700;1,400..700&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
     rel="stylesheet">
-    <script type="text/javascript" src="/blocking_new.js"></script>
-    <script type="text/javascript" src="https://privy-cookie-manager.idfy.com/ext/cookie-banner/76e7bf3c-564f-4769-9c59-91ebada9eeaa"></script>
+    <!-- <script type="text/javascript" src="/blocking_new.js"></script> -->
+    <!-- <script type="text/javascript" src="https://privy-cookie-manager.idfy.com/ext/cookie-banner/76e7bf3c-564f-4769-9c59-91ebada9eeaa"></script> -->
   <!-- Google Tag Manager -->
   <script>(function (w, d, s, l, i) {
     w[l] = w[l] || []; w[l].push({
