--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 <script>
         // Block iframe, img, embed, and script elements before body is fully processed
         document.addEventListener("DOMContentLoaded", () => {
-            processExistingElements();
-            setupPrivacyObserver();
+            // processExistingElements();
+            // setupPrivacyObserver();
+          observeYouTubeVideo()
         });
     </script>
     <script type="text/javascript" src="https://privy-cookie-manager.idfy.com/ext/cookie-banner/76e7bf3c-564f-4769-9c59-91ebada9eeaa"></script>
