--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     rel="stylesheet">
     <script type="text/javascript" src="/blocking_new.js"></script>
     <script type="text/javascript" src="https://privy-cookie-manager.idfy.com/ext/cookie-banner/76e7bf3c-564f-4769-9c59-91ebada9eeaa"></script>
+    <script async="" src="https://www.clarity.ms/tag/f4v1091lex"></script>
   <!-- Google Tag Manager -->
   <script>(function (w, d, s, l, i) {
     w[l] = w[l] || []; w[l].push({
