addded clarity ms and youtube video via script

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 </head>
 
 <body>
+  <script type="text/javascript" src="/insertYoutubeVid.js"></script>
+  <script async="" data-src="https://www.clarity.ms/tag/f4v1091lex"></script>
+
   <!-- <script type="text/javascript" src="./public/cookie-banner.js"></script> -->
   <!-- Google Tag Manager (noscript) -->
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KS3M7CSF" height="0" width="0"
