--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-  <script type="text/javascript" src="/insertYoutubeVid.js"></script>
+  <!-- <script type="text/javascript" src="/insertYoutubeVid.js"></script> -->
   <script async="" data-src="https://www.clarity.ms/tag/f4v1091lex"></script>
 
   <!-- <script type="text/javascript" src="./public/cookie-banner.js"></script> -->
