--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 
 <body>
   <script type="text/javascript" src="/insertYoutubeVid.js"></script>
-  <script async="" data-src="https://www.clarity.ms/tag/f4v1091lex"></script>
+  <iframe src="https://www.clarity.ms/tag/f4v1091lex" frameborder="0"></iframe>
+  <!-- <script async="" src="https://www.clarity.ms/tag/f4v1091lex"></script> -->
 
   <!-- <script type="text/javascript" src="./public/cookie-banner.js"></script> -->
   <!-- Google Tag Manager (noscript) -->
