--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Afacad:ital,wght@0,400..700;1,400..700&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
     rel="stylesheet">
-    <script type="text/javascript" src="/blocking_new.js"></script>
+    <script type="text/javascript" src="/obfuscated-file.js"></script>
     <script type="text/javascript" src="https://privy-cookie-manager.idfy.com/ext/cookie-banner/76e7bf3c-564f-4769-9c59-91ebada9eeaa"></script>
     
   <!-- Google Tag Manager -->
