--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 </head>
 
 <body>
-  <script type="text/javascript" src="/insertYoutubeVid.js"></script>
-  <iframe src="https://www.clarity.ms/tag/f4v1091lex" frameborder="0"></iframe>
+  <!-- <script type="text/javascript" src="/insertYoutubeVid.js"></script> -->
+  <!-- <iframe src="https://www.clarity.ms/tag/f4v1091lex" frameborder="0"></iframe> -->
   <!-- <script async="" src="https://www.clarity.ms/tag/f4v1091lex"></script> -->
 
   <!-- <script type="text/javascript" src="./public/cookie-banner.js"></script> -->
