--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Afacad:ital,wght@0,400..700;1,400..700&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
     rel="stylesheet">
-    <script type="text/javascript" src="/blocking_new.js"></script>
-    <script type="text/javascript" src="https://privy-cookie-manager.idfy.com/ext/cookie-banner/76e7bf3c-564f-4769-9c59-91ebada9eeaa"></script>
+    <!-- <script type="text/javascript" src="/blocking_new.js"></script> -->
+    <!-- <script type="text/javascript" src="https://privy-cookie-manager.idfy.com/ext/cookie-banner/76e7bf3c-564f-4769-9c59-91ebada9eeaa"></script> -->
     
   <!-- Google Tag Manager -->
   <script>(function (w, d, s, l, i) {
@@ -32,7 +32,7 @@
   <!-- <iframe src="https://www.clarity.ms/tag/f4v1091lex" frameborder="0"></iframe> -->
   <!-- <script async="" src="https://www.clarity.ms/tag/f4v1091lex"></script> -->
 
-  <!-- <script type="text/javascript" src="./public/cookie-banner.js"></script> -->
+  <script type="text/javascript" src="/cookie-banner.js"></script>
   <!-- Google Tag Manager (noscript) -->
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KS3M7CSF" height="0" width="0"
       style="display:none;visibility:hidden"></iframe></noscript>
