new banner file created

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <!-- <iframe src="https://www.clarity.ms/tag/f4v1091lex" frameborder="0"></iframe> -->
   <!-- <script async="" src="https://www.clarity.ms/tag/f4v1091lex"></script> -->
 
-  <script type="text/javascript" src="/cookie-banner.js"></script>
+  <script type="text/javascript" src="/test-banner.js"></script>
   <!-- Google Tag Manager (noscript) -->
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KS3M7CSF" height="0" width="0"
       style="display:none;visibility:hidden"></iframe></noscript>
