--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cookie Manager</title>
+  <script type="text/javascript" src="/banner-with-blocking.js"></script>
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -32,7 +34,6 @@
   <!-- <iframe src="https://www.clarity.ms/tag/f4v1091lex" frameborder="0"></iframe> -->
   <!-- <script async="" src="https://www.clarity.ms/tag/f4v1091lex"></script> -->
 
-  <script type="text/javascript" src="/test-banner.js"></script>
   <!-- Google Tag Manager (noscript) -->
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KS3M7CSF" height="0" width="0"
       style="display:none;visibility:hidden"></iframe></noscript>
