--- a/index.html
+++ b/index.html
@@ -6,16 +6,14 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cookie Manager</title>
-  <script type="text/javascript" src="/banner-with-blocking.js"></script>
+  <script type="text/javascript" src="https://privy-cookie-manager.idfy.com/ext/cookie-banner/29899703-ba76-46c0-80c8-49dbc166be5e"></script>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Afacad:ital,wght@0,400..700;1,400..700&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
     rel="stylesheet">
-    <!-- <script type="text/javascript" src="/blocking_new.js"></script> -->
-    <!-- <script type="text/javascript" src="https://privy-cookie-manager.idfy.com/ext/cookie-banner/76e7bf3c-564f-4769-9c59-91ebada9eeaa"></script> -->
-    
+
   <!-- Google Tag Manager -->
   <script>(function (w, d, s, l, i) {
     w[l] = w[l] || []; w[l].push({
@@ -30,7 +28,6 @@
 </head>
 
 <body>
-  <!-- <script type="text/javascript" src="/insertYoutubeVid.js"></script> -->
   <!-- <iframe src="https://www.clarity.ms/tag/f4v1091lex" frameborder="0"></iframe> -->
   <!-- <script async="" src="https://www.clarity.ms/tag/f4v1091lex"></script> -->
 
