banner link changed

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cookie Manager</title>
-  <script type="text/javascript" src="https://privy-cookie-manager.idfy.com/ext/cookie-banner/69366bc0-12ec-4f26-a7e2-f659ef2c6f35"></script>
-  
+  <script type="text/javascript" src="https://privy-cookie-manager.idfystaging.com/ext/cookie-banner/165aba19-cfcd-4555-af48-0319cb5d6f18"></script>
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
