new banner added

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cookie Manager</title>
-  <script type="text/javascript" src="https://privy-cookie-manager.idfystaging.com/ext/cookie-banner/165aba19-cfcd-4555-af48-0319cb5d6f18"></script>
-
+  <!-- <script type="text/javascript" src="cookie-banner.js"></script> -->
+  <!-- <script type="text/javascript" src="http://localhost:3000/ext/cookie-banner/044894c5-9e81-4c34-8423-d3ee8b1b9fd1"></script> -->
+  <script type="text/javascript" src="https://privy-cookie-manager.idfystaging.com/ext/cookie-banner/55a3f641-49b9-4f7b-b317-501735acf1af"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -35,7 +36,7 @@
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KS3M7CSF" height="0" width="0"
       style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
-
+    <button id="reconsent-btn-privy">reconsent</button>
   <div id="root"></div>
   <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/embed/v2.js"></script>
   <script>
@@ -46,5 +47,8 @@
   </script>
   <script type="module" src="/src/main.jsx"></script>
 </body>
+<script>
+  // document.addEventListener("click", reconsentPreference(agreed))
+</script>
 
 </html>
