--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cookie Manager</title>
   <!-- <script type="text/javascript" src="cookie-banner.js"></script> -->
-  <!-- <script type="text/javascript" src="http://localhost:3000/ext/cookie-banner/044894c5-9e81-4c34-8423-d3ee8b1b9fd1"></script> -->
-  <!-- <script type="text/javascript" src="https://privy-cookie-manager.idfystaging.com/ext/cookie-banner/55a3f641-49b9-4f7b-b317-501735acf1af"></script> -->
+  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/464651a5-d301-49eb-a941-307a46dcaf83"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
