--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cookie Manager</title>
-  <!-- <script type="text/javascript" src="cookie-banner.js"></script> -->
-  <script type="text/javascript" src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/f151f510-ba47-4d25-94c3-5372e92a9f27"></script>
+  <script type="text/javascript" src="cookie-banner.js"></script>
+  <!-- <script type="text/javascript" src="http://localhost:3000/ext/cookie-banner/assets/6a53a4e5-b06f-4aee-9597-b625e184f28c"></script> -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
