cookieyes banner added

--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cookie Manager</title>
 
+  <!-- //////////////// Cookie Scripts Section //////////////// -->
   <!-- <script type="text/javascript" src="cookie-banner.js"></script> -->
-  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/03541860-e716-44e5-af60-cee983d936e3"></script>
+   <!-- Start cookieyes banner --> 
+    <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/a7405f25eda1126173389101/script.js"></script> 
+    <!-- End cookieyes banner -->
   
-  
+
+
+  <!-- ////////////////////////////////////////////////// -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
