--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 
   <!-- //////////////// Cookie Scripts Section //////////////// -->
   <!-- <script type="text/javascript" src="cookie-banner.js"></script> -->
-   <!-- Start cookieyes banner --> 
-    <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/a7405f25eda1126173389101/script.js"></script> 
-    <!-- End cookieyes banner -->
+<!-- Start cookieyes banner --> <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/a7405f25eda1126173389101/script.js"></script> <!-- End cookieyes banner -->
   
 
 
