--- a/index.html
+++ b/index.html
@@ -13,6 +13,33 @@
 <!-- Start cookieyes banner --> <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/a7405f25eda1126173389101/script.js"></script> <!-- End cookieyes banner -->
   
   <!-- ---------------------- -->
+
+  <script type="module">
+    import {
+      TCModel,
+      TCString,
+      GVL
+    } from 'https://cdn.skypack.dev/@iabtcf/core@1.5.6';
+
+    GVL.baseUrl = 'http://localhost:3000/ext/cookie-banner/api/v1/iab-tcf/vendor-list';
+
+    const gvl = new GVL();
+
+    gvl.readyPromise.then(() => {
+      const tcModel = new TCModel(gvl);
+      tcModel.cmpId = 123;
+      tcModel.cmpVersion = 1;
+      tcModel.consentScreen = 0;
+      tcModel.consentLanguage = 'EN';
+      tcModel.purposeConsents.set([1, 2]);
+      tcModel.vendorConsents.set([10, 20, 30]);
+
+      const tcString = TCString.encode(tcModel);
+      console.log('✅ Encoded TC String:', tcString);
+      console.log('🧠 Full TCModel:', tcModel);
+    });
+  </script>
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
