--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       GVL
     } from 'https://cdn.skypack.dev/@iabtcf/core@1.5.6';
 
-    GVL.baseUrl = 'https://moral-capital-bison.ngrok-free.app/ext/cookie-banner/api/v1/iab-tcf/vendor-list';
+    GVL.baseUrl = 'https://cdn-cookieyes.com/common/iab-gvl-v3.json';
 
     const gvl = new GVL();
 
