--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     } from 'https://cdn.skypack.dev/@iabtcf/core@1.5.6';
   
     // ✅ Official IAB source with CORS
-    GVL.baseUrl = 'https://vendor-list.consensu.org/v3/vendor-list.json';
+    GVL.baseUrl = 'https://vendor-list.consensu.org/v3/';
   
     const gvl = new GVL();
   
