--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cookie Manager</title>
 
+  
   <!-- Cookie Scripts Section  -->
   <!-- <script type="text/javascript" src="cookie-banner.js"></script> -->
-  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/c1b5bba9-d393-45d4-a8c5-f93aec89d83e"></script>  
+  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/5074785d-555a-4169-905f-919ebe042829"></script>
+  <!-- <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/c1b5bba9-d393-45d4-a8c5-f93aec89d83e"></script>   -->
 <!-- <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/a7405f25eda1126173389101/script.js"></script> End cookieyes banner -->
   
   <!-- ---------------------- -->
