--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   
   <!-- Cookie Scripts Section  -->
   <!-- <script type="text/javascript" src="cookie-banner.js"></script> -->
-  <script type="text/javascript" src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/4aada15c-efcc-43ba-b303-5576e0b0f02a"></script>  <!-- <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/c1b5bba9-d393-45d4-a8c5-f93aec89d83e"></script>   -->
-<!-- <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/a7405f25eda1126173389101/script.js"></script> End cookieyes banner -->
+  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/e8cb3965-ff31-4692-98ef-dbdc794ddc0a"></script>  <!-- <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/a7405f25eda1126173389101/script.js"></script> End cookieyes banner -->
   
   <!-- ---------------------- -->
 
