--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   
   <!-- Cookie Scripts Section  -->
   <!-- <script type="text/javascript" src="cookie-banner.js"></script> -->
-  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/e8cb3965-ff31-4692-98ef-dbdc794ddc0a"></script>  <!-- <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/a7405f25eda1126173389101/script.js"></script> End cookieyes banner -->
-  
+  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/17836348-fd45-410f-bb94-5249d15916ff"></script>  
   <!-- ---------------------- -->
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
