--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
   <!-- Cookie Scripts Section  -->
   <!-- <script type="text/javascript" src="cookie-banner.js"></script> -->
-  <script type="text/javascript" src="https://cookie-manager.pyxis.privybyidfy.app/cookie-banner/assets/c0daf215-fd1e-493a-a441-f30e1c4e3ed2"></script>
+  <script type="text/javascript" src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/92a9e707-1d46-49b2-bae7-151add1c2cbe"></script>
   <!-- <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/17836348-fd45-410f-bb94-5249d15916ff"></script>   --> 
   ----------------------
 
