--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
   
   <!-- Cookie Scripts Section  -->
   <!-- <script type="text/javascript" src="cookie-banner.js"></script> -->
-  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/20487226-fc86-4d8b-a533-5374d33cf600"></script>
-      
-  <!-- ---------------------- -->
+  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/4b067350-8cea-41f5-9adc-d766f029fda1"></script>  <!-- ---------------------- -->
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
