--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   
   <!-- Cookie Scripts Section  -->
   <!-- <script type="text/javascript" src="cookie-banner.js"></script> -->
-  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/4b067350-8cea-41f5-9adc-d766f029fda1"></script>  <!-- ---------------------- -->
-
+  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/e8cb3965-ff31-4692-98ef-dbdc794ddc0a"></script>
+  
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
