--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   
   <!-- Cookie Scripts Section  -->
   <!-- <script type="text/javascript" src="cookie-banner.js"></script> -->
-  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/57ccaa41-dd68-417e-8f24-400d3f9d5e4f"></script>
-    
+  <script type="text/javascript" src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/114dbeeb-251b-4b3f-8f47-7adcf4b6fe44"></script>
+      
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
