--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   
   <!-- Cookie Scripts Section  -->
   <!-- <script type="text/javascript" src="cookie-banner.js"></script> -->
-  <script type="text/javascript" src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/114dbeeb-251b-4b3f-8f47-7adcf4b6fe44"></script>
-      
+  <script type="text/javascript" src="https://cookie-manager.pyxis.privybyidfy.app/cookie-banner/assets/99fad724-a233-44c4-ae5b-89c2e8b6f8b1"></script>
+        
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
