--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Cookie Scripts Section  -->
   <!-- <script type="text/javascript" src="cookie-banner.js"></script> -->
 <!-- Start cookieyes banner --> 
-<script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/6504f94f-a898-4272-a096-500dd1c86909"></script>
+<script type="text/javascript" src="https://cookie-manager.pyxis.privybyidfy.app/cookie-banner/assets/e858bbcb-d3eb-426a-9233-5e3827b5f0d2"></script>
 
 
  <script type="text/javascript" id="www-widgetapi-script" src="https://www.youtube.com/s/player/5d68a2c6/www-widgetapi.vflset/www-widgetapi.js" async=""></script>
