--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <!-- Cookie Scripts Section  -->
   <!-- <script type="text/javascript" src="cookie-banner.js"></script> -->
 <!-- Start cookieyes banner --> 
-<script type="text/javascript" src="https://cookie-manager.pyxis.privybyidfy.app/cookie-banner/assets/e858bbcb-d3eb-426a-9233-5e3827b5f0d2"></script>
-
+<script type="text/javascript" src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/a69bf123-88d1-41c1-8dac-3e203be236be"></script>
 
  <script type="text/javascript" id="www-widgetapi-script" src="https://www.youtube.com/s/player/5d68a2c6/www-widgetapi.vflset/www-widgetapi.js" async=""></script>
 
