--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <title>Cookie Manager</title>
 
   <!-- Cookie Scripts Section  -->
-  <!-- <script type="text/javascript" src="cookie-banner.js"></script> -->
-<!-- Start cookieyes banner --> 
-<script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/c75ecdb7-7358-492a-8960-0fcafe27a75b"></script> <!-- End cookieyes banner -->
-         
+  <!-- <script type="text/javascript" src="iab_banner_test.js"></script> -->
+  <!-- Start cookieyes banner --> 
+   <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/a7405f25eda1126173389101/script.js"></script> 
+  <!-- End cookieyes banner -->     
 
  <script type="text/javascript" id="www-widgetapi-script" src="https://www.youtube.com/s/player/5d68a2c6/www-widgetapi.vflset/www-widgetapi.js" async=""></script>
 
