--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
   <!-- Cookie Scripts Section  -->
   <!-- <script type="text/javascript" src="test2.js"></script> -->
   <!-- Start cookieyes banner --> 
-   <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/a7405f25eda1126173389101/script.js"></script> 
-  <!-- End cookieyes banner -->   
+  <script type="text/javascript" src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/4597ec62-6853-45d8-a988-c443785b41ba"></script>  <!-- End cookieyes banner -->   
 
-  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/3e566942-01ae-47f6-a987-52bcd848c083"></script>
-
+  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/0d9c867a-9749-43d1-b9c8-5bcc51a0e8c4"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
