--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <!-- Cookie Scripts Section  -->
   <!-- <script type="text/javascript" src="test2.js"></script> -->
   <!-- Start cookieyes banner --> 
-<script type="text/javascript" src="https://privy.idfy.com/cookie-manager/cookie-banner/assets/4597ec62-6853-45d8-a988-c443785b41ba"></script>
-
+<script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/a7405f25eda1126173389101/script.js"></script> 
 <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
