--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <title>Cookie Manager</title>
 
   <!-- Cookie Scripts Section  -->
-  <!-- <script type="text/javascript" src="test2.js"></script> -->
+  <script type="text/javascript" src="refactored.js"></script>
   <!-- Start cookieyes banner --> 
-   <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/a7405f25eda1126173389101/script.js"></script> 
+   <!-- <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/a7405f25eda1126173389101/script.js"></script>  -->
   <!-- End cookieyes banner -->   
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
