--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <title>Cookie Manager</title>
 
   <!-- Cookie Scripts Section  -->
-  <script type="text/javascript" src="refactored.js"></script>
-  <!-- Start cookieyes banner --> 
+  <!-- <script type="text/javascript" src="refactored.js"></script> -->
+<script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/99945fc1-2306-4c2d-90bb-031d61a4a0ea"></script>  <!-- Start cookieyes banner --> 
    <!-- <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/a7405f25eda1126173389101/script.js"></script>  -->
   <!-- End cookieyes banner -->   
 
