--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 
   <!-- Cookie Scripts Section  -->
   <!-- <script type="text/javascript" src="refactored.js"></script> -->
-<script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/99945fc1-2306-4c2d-90bb-031d61a4a0ea"></script>  <!-- Start cookieyes banner --> 
-   <!-- <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/a7405f25eda1126173389101/script.js"></script>  -->
+  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/de9ede37-311e-45db-bc10-612d880ac08d"></script>   <!-- <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/a7405f25eda1126173389101/script.js"></script>  -->
   <!-- End cookieyes banner -->   
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
