--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
   <!-- Cookie Scripts Section  -->
   <!-- <script type="text/javascript" src="refactored.js"></script> -->
-  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/5ff9a834-86df-452f-adfe-556c89975f0c"></script>
+  <script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/d3cec4a3-d20a-4432-80b1-b1b6efec6f67"></script>
+
+  <!-- End of Scripts Section  -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
