--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 
   <!-- Cookie Scripts Section  -->
   <!-- <script type="text/javascript" src="refactored.js"></script> -->
-<script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/1279ae07-f30e-4e6b-87da-fc99eb01898a"></script>
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<script type="text/javascript" src="https://privy.idfystaging.com/cookie-manager/cookie-banner/assets/75132d48-6267-4f43-b559-a4f065b4b8ad"></script>  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Afacad:ital,wght@0,400..700;1,400..700&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
     rel="stylesheet">
